# ocmmuni

./: .gitignore  DevelopLog1.md  DevelopLog2.md  DevelopLog3.md  README.md
Android/OcmmuniDemo/app/: CMakeLists.txt  build.gradle
Android/OcmmuniDemo/app/src/androidTest/java/com/alipay/iap/ocmmuni/ocmmuni/: ExampleInstrumentedTest.java
Android/OcmmuniDemo/app/src/main/: AndroidManifest.xml
Android/OcmmuniDemo/app/src/main/java/com/alipay/iap/ocmmuni/ocmmuni/: MainActivity.java
Core/: .gitignore
Core/PlatfromBuild/Android/src/androidTest/java/com/alipay/iap/ocmmuni/ocmmuni/: ExampleInstrumentedTest.java
Core/PlatfromBuild/Android/src/main/: AndroidManifest.xml
Core/PlatfromBuild/Android/src/main/cpp/: native-lib.cpp
Core/TCP/: .gitignore  CMakeLists.txt  build.sh  config.h.in  main.cpp
Core/TCP/src/: CMakeLists.txt  MathFunctions.cpp
Core/src/: main.cc
Ocmmuni/Core/: .gitignore  CMakeLists.txt  build.sh  buildtest.sh  main.cpp
Ocmmuni/Core/asio/asio/detail/: addressof.hpp  config.hpp
Ocmmuni/Core/math/: CMakeLists.txt  MathFunctions.h
Ocmmuni/Core/math/src/: MathFunctions.cpp
Ocmmuni/Core/ocmtcp/: CMakeLists.txt
Ocmmuni/Core/ocmtcp/lib/: OcmmuniTCP.cpp  OcmmuniTCP.h
Ocmmuni/Core/ocmtcp/src/: OcmmuniTCP.cpp  OcmmuniTCP.h  connection.hpp  main.cpp  reply.hpp  server.cpp  server.hpp
Ocmmuni/PlatfromBuild/Android/: CMakeLists.txt  build.gradle  proguard-rules.pro
Ocmmuni/PlatfromBuild/Android/src/androidTest/java/com/alipay/iap/ocmmuni/ocmmuni/: ExampleInstrumentedTest.java
Ocmmuni/PlatfromBuild/Android/src/main/cpp/: native-lib.cpp
Ocmmuni/PlatfromBuild/Android/src/main/cpp/ndkgen/ocmtcp/: CMakeLists.txt
Ocmmuni/PlatfromBuild/Android/src/main/java/com/alipay/iap/ocmmuni/ocmmuni/: Entry.java
Ocmmuni/PlatfromBuild/Android/src/main/res/values/: strings.xml
Ocmmuni/PlatfromBuild/Android/src/test/java/com/alipay/iap/ocmmuni/ocmmuni/: ExampleUnitTest.java
Server/: CMakeLists.txt  build.sh  main.cpp
Server/examples/allocation/: sendmessage.sh  server.cpp
Server/src/: main.cpp
